--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 
 <body>
     <h1>Abdulla</h1>
-    <h1 class="head">Asadbek</h1>
+    <h2 class="head">Asadbek</h2>
+    <p class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam voluptatem odio sint dolores non
+        earum
+        cupiditate quam quae et harum deserunt itaque maiores, sequi ea distinctio iure fugiat maxime? Quia.</p>
+
 </body>
 
 </html>
