--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 </head>
 
 <body>
+    <div>
+        <button class="button">
+            <h1 class="list">Nuriddin</h1>
+        </button>
+    </div>
     <h1>Abdulla</h1>
     <h2 class="head">Asadbek</h2>
-    <p class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam voluptatem odio sint dolores non
-        earum
-        cupiditate quam quae et harum deserunt itaque maiores, sequi ea distinctio iure fugiat maxime? Quia.</p>
-
+    <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo, fugit.</p>
 </body>
 
 </html>
